# faceit-scout

./: .env.example  .gitignore  Add matches.cmd  Calibrate.cmd  Capture refs.cmd  Capture replay.cmd  DISTRIBUTION.md  Dockerfile  FEATURES.md  Force update.cmd  GUIDED  Learn heroes.cmd  README.md  Rebuild dashboard.cmd  SPEC.md  Scout app.cmd  Update from league.cmd  auto-update.cmd  dashboard.html  docker-compose.yml  matches.txt  owscout-testing.spec  owscout.spec  owscout_app.py  owscout_comps.json  owscout_version.txt  pyproject.toml  setup.txt  verify_accuracy.py
.github/workflows/: update.yml
data/captures/: ccarn.json  ccarn1.json  ccarn11.json  eogha.json  geebyeeby.json  purei.json
docs/: captured.json  index.html
faceit_sync/: __init__.py  _dashboard.py  cli.py  client.py  db.py  export.py  hero_icons.json  hero_icons.py  models.py  subroles.py  sync.py
infra/upload-worker/: worker.js  wrangler.toml
owscout/: __init__.py  analysis.py  calibrate.py  capture.py  cli.py  comps.py  context.py  contribute.py  db.py  derive.py  errors.py  faceit.py  gui.py  integrity.py  maps.py  match.py  models.py  refs.py  scout.py
owscout/tests/: test_analysis.py  test_capture.py  test_codes.py  test_comps.py  test_context.py  test_contribute.py  test_derive.py  test_geometry.py  test_harvest.py  test_hashing.py  test_integrity.py  test_keybinds.py  test_maps.py  test_match.py  test_persistence.py  test_profiles.py  test_ref_bundle.py  test_refs.py  test_scout.py
tests/: conftest.py  test_auto_calibrate.py  test_backoff.py  test_capture_controls.py  test_export.py  test_gui_progress.py  test_history.py  test_idempotency.py  test_pagination.py  test_ref_import_rescale.py  test_restart.py  test_scheduled.py  test_snapshot_download.py  test_stats_null.py  test_sync.py
tests/fixtures/: clean_democracy.json  clean_match.json  clean_stats.json  normal_30_history.json  normal_30_match.json  normal_30_stats.json  restart_dc_democracy.json  restart_dc_match.json  restart_dc_stats.json
