[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "faceit-sync"
version = "0.1.0"
description = "Incremental, idempotent ingest of FACEIT League (Overwatch 2) championship data into SQLite."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
    "mypy>=1.8",
    "types-requests>=2.31",
]
# owscout (sibling tool) screen-capture / CV runtime deps. Optional so the
# faceit-sync install and test suite need none of them; imported lazily.
capture = [
    "dxcam>=0.0.5",
    "mss>=9.0",
    "opencv-python>=4.9",
    "numpy>=1.26",
    "keyboard>=0.13",
]

[project.scripts]
faceit-sync = "faceit_sync.cli:main"
owscout = "owscout.cli:main"
owscout-app = "owscout.gui:main"

[tool.setuptools.packages.find]
include = ["faceit_sync*", "owscout*"]

# The inlined hero portraits ship with the package: a build without them renders
# a portrait-less dashboard, which is a silent visual regression rather than an
# error. Regenerate with `python -m faceit_sync.hero_icons <asset-dir>`.
[tool.setuptools.package-data]
faceit_sync = ["hero_icons.json"]

[tool.mypy]
# Analysis targets 3.12 (the dev/CI interpreter, and what numpy's current stubs
# require); runtime floor stays 3.11 via requires-python.
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
# The SQLite rows we read back are Any-typed by nature; keep those localized.
warn_return_any = false

# owscout's capture stack ships no usable stubs (and numpy's are 3.12-only
# syntax that trips a 3.11-targeted check), so skip following them entirely.
[[tool.mypy.overrides]]
module = ["cv2", "dxcam", "mss", "numpy", "numpy.*", "keyboard"]
ignore_missing_imports = true
follow_imports = "skip"

# The GUI is thin Tkinter glue (runtime-only, no-cover). Tkinter's partial stubs
# make strict checks noisy (literal-typed pack/grid kwargs, dict-returning
# configure()), so skip type-checking this one module — the logic it wraps is
# typed and tested elsewhere.
[[tool.mypy.overrides]]
module = ["owscout.gui"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests", "owscout/tests"]
addopts = "-q"
